@@ -238,6 +238,7 @@
     <dependencies>
       <dep package="Xcomposite" />
       <dep package="Xdamage" />
+      <dep package="Xrender" />
     </dependencies>
   </cvsmodule>
 
