@@ -1,5 +1,12 @@
 2004-02-10  James Henstridge  <james@daa.com.au>
 
+	* modulesets/freedesktop.modules (xcompmgr): add dependency on
+	Xrender.
+
+	* jhbuild/commands/sanitycheck.py (do_sanitycheck): add checks to
+	see whether the checkout root and install prefix are directories
+	and writable.
+
 	* jhbuild/main.py (main): turn off traceback printing, so we just
 	get the error message.
 
